--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,4 +4,5 @@
 <!-- shows an excert of the body(35 words) -->
 <br>
 <%= link_to "Read Post", post %>
+<!-- post = prefix - post ($ rake roots)-->
 <% end %>
