--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,9 +1,2 @@
-<%= form_for @post do |f| %>
-<%= f.label :title %><br>
-<%= f.text_field :title %><br>
-<br>
-<%= f.label :body %><br>
-<%= f.text_area :body %><br>
-<br>
-<%= f.submit %>
-<% end %>
+<h1>Edit post</h1>
+<%= render 'form' %>
