--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,3 +2,7 @@
 <div>
   <%= @post.body %>
 </div>
+<br>
+<%= link_to "Edit Post", edit_post_path(@post) %>
+<!-- edit_post = prefix - edit_post ($ rake roots)-->
+<%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure?" } %>
