--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+
+    <%= link_to "Home", root_path %>
+    <%= link_to "New Post", new_post_path %>
     <%= yield %>
+    <!-- imports the posts html's -->
   </body>
 </html>
